--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
                 <h1 class="collapse navbar-collapse letralogo">Market Online</h1>
             </div>
         </div>
+
         <form class="d-flex flex-nowrap"  id="form1">
             <input type="text"  class="buscador-1" placeholder="Buscar">
-            <!-- <a  type="submit" class="buscador-icon" href="#">
-                <input type="image" class="buscador-icon-input" src="./assets/icon/magnifying-glass-solid.svg" >
-            </a> --> 
             <input type="image" class="buscador-2" src="./assets/icon/magnifying-glass-solid.svg" >
 
         </form>
@@ -49,14 +47,14 @@
           </a>
           <div class="modal fade " id="exampleModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog ">
-              <div class="modal-content">
+              <div class="modal-content modalCarrit">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <h5 class="modal-title" id="staticBackdropLabel">Carrito</h5>
+                  <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="Container-carrit"></div>
-                <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
-                <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>  
+                <p class="precioProducto letramodal">Precio total: $<span id="precioTotal">0</span></p>
+                <button id="vaciar-carrito" class="boton-agregar letramodal">Vaciar carrito</button>  
               </div>
             </div>
           </div>
